--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=iis-server
+server.port=${SERVER_PORT:8080}
+spring.datasource.url=jdbc:${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
+app.jwt-secret=${JWT_SECRET}
