--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     //implementation 'org.liquibase:liquibase-core'
     implementation 'org.jetbrains:annotations:24.1.0'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
