users management update

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,2 @@
 spring.jpa.hibernate.ddl-auto=create
-app.allowed-origins=http://localhost:3000,http://localhost:4200
+app.allowed-origins=http://localhost:3000,http://localhost:4200,http://localhost:5173
